BAP-17086: Enable device switcher on commerce-demo - fix align of main container for demo sites

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/form-signin.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/form-signin.scss
@@ -13,7 +13,6 @@
             > .container {
                 width: auto;
                 display: flex;
-                justify-content: center;
             }
         }
     }
